tests/ui/lang/asm/block_tracking_fail.stderr
error: `noreturn` requires a terminator at the end
  --> $DIR/block_tracking_fail.rs:10:9
   |
10 |         asm!("", options(noreturn));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trailing terminator Unreachable requires `options(noreturn)`
  --> $DIR/block_tracking_fail.rs:17:9
   |
17 |         asm!("OpUnreachable");
   |         ^^^^^^^^^^^^^^^^^^^^^

error: expected OpLabel after terminator Kill
  --> $DIR/block_tracking_fail.rs:24:9
   |
24 | /         asm!(
25 | |             "OpKill",
26 | |             "%sum = OpFAdd _ {x} {x}",
27 | |             x = in(reg) x,
28 | |         );
   | |_________^

error: aborting due to 3 previous errors

